--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-00013-g80c5218-dirty Configuration
+# Buildroot 2013.05-00023-g3e1f4ee-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -1488,6 +1488,9 @@ BR2_PACKAGE_META_SERVER=y
 BR2_PACKAGE_STREAM_DECODER=y
 BR2_PACKAGE_STREAM_RELAY=y
 # BR2_PACKAGE_LOOPBACKTEST is not set
+BR2_PACKAGE_RAUMFELD_DTS=y
+BR2_PACKAGE_RAUMFELD_DTS_REPOSITORY="ssh://git@sources.teufelhome.com/rfs/dts.git"
+BR2_PACKAGE_RAUMFELD_DTS_VERSION="raumfeld-am33xx-3.9"
 # BR2_PACKAGE_RAUMFELD_EXTRACT is not set
 BR2_PACKAGE_REPORT_DAEMON=y
 BR2_PACKAGE_WEB_SERVICE=y
