--- a/raumfeld/br2-base-geode.config
+++ b/raumfeld/br2-base-geode.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-01013-g470f62d Configuration
+# Buildroot 2013.05-00023-g3e1f4ee-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -791,7 +791,10 @@ BR2_PACKAGE_LIBSOUP_SSL=y
 # BR2_PACKAGE_BOOST is not set
 # BR2_PACKAGE_GLIBMM is not set
 BR2_PACKAGE_GMP=y
-# BR2_PACKAGE_GOOGLE_BREAKPAD is not set
+
+#
+# google-breakpad requires a toolchain with C++ and context control functions
+#
 # BR2_PACKAGE_GSL is not set
 # BR2_PACKAGE_GTEST is not set
 # BR2_PACKAGE_LIBATOMIC_OPS is not set
