--- a/raumfeld/br2-remotecontrol-arm.config
+++ b/raumfeld/br2-remotecontrol-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-00013-g80c5218-dirty Configuration
+# Buildroot 2013.05-00023-g3e1f4ee-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -1448,6 +1448,7 @@ BR2_PACKAGE_REMOTE_CONTROL=y
 # BR2_PACKAGE_STREAM_DECODER is not set
 # BR2_PACKAGE_STREAM_RELAY is not set
 # BR2_PACKAGE_LOOPBACKTEST is not set
+# BR2_PACKAGE_RAUMFELD_DTS is not set
 # BR2_PACKAGE_RAUMFELD_EXTRACT is not set
 BR2_PACKAGE_REPORT_DAEMON=y
 # BR2_PACKAGE_WEB_SERVICE is not set
