--- a/raumfeld/br2-audioadapter-arm.config
+++ b/raumfeld/br2-audioadapter-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-00023-g3e1f4ee-dirty Configuration
+# Buildroot 2013.05-00055-g25357af-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -1470,25 +1470,26 @@ BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
 #
 # Raumfeld software
 #
-BR2_PACKAGE_RAUMFELD_REPOSITORY="sftp://rf-bzr.teufel.local/bzr"
-BR2_PACKAGE_RAUMFELD_BRANCH="trunk"
+BR2_PACKAGE_RAUMFELD_REPO=y
+BR2_PACKAGE_RAUMFELD_REPO_LOCATION="y"
+BR2_PACKAGE_RAUMFELD_REPO_VERSION="master"
+BR2_PACKAGE_CONFIG_SERVICE=y
 BR2_PACKAGE_ETHWATCH=y
 BR2_PACKAGE_LIBRAUMFELD=y
 # BR2_PACKAGE_LIBRAUMFELD_PROFILING is not set
 BR2_PACKAGE_LIBRAUMFELDCPP=y
-# BR2_PACKAGE_SLY_TOOLKIT is not set
-# BR2_PACKAGE_REMOTE_CONTROL is not set
-BR2_PACKAGE_MASTER_PROCESS=y
-BR2_PACKAGE_RENDERER=y
-BR2_PACKAGE_TIMESERVER=y
-BR2_PACKAGE_CONFIG_SERVICE=y
-BR2_PACKAGE_META_SERVER=y
-BR2_PACKAGE_STREAM_DECODER=y
-BR2_PACKAGE_STREAM_RELAY=y
 # BR2_PACKAGE_LOOPBACKTEST is not set
+BR2_PACKAGE_MASTER_PROCESS=y
+BR2_PACKAGE_META_SERVER=y
 # BR2_PACKAGE_RAUMFELD_DTS is not set
 # BR2_PACKAGE_RAUMFELD_EXTRACT is not set
+# BR2_PACKAGE_REMOTE_CONTROL is not set
+BR2_PACKAGE_RENDERER=y
 BR2_PACKAGE_REPORT_DAEMON=y
+# BR2_PACKAGE_SLY_TOOLKIT is not set
+BR2_PACKAGE_STREAM_DECODER=y
+BR2_PACKAGE_STREAM_RELAY=y
+BR2_PACKAGE_TIMESERVER=y
 BR2_PACKAGE_WEB_SERVICE=y
 
 #
