--- a/raumfeld/br2-initramfs-armada.config
+++ b/raumfeld/br2-initramfs-armada.config
@@ -285,7 +285,7 @@ BR2_PACKAGE_BUSYBOX=y
 BR2_BUSYBOX_VERSION_1_21_X=y
 # BR2_PACKAGE_BUSYBOX_SNAPSHOT is not set
 BR2_BUSYBOX_VERSION="1.21.1"
-BR2_PACKAGE_BUSYBOX_CONFIG="raumfeld/busybox.config"
+BR2_PACKAGE_BUSYBOX_CONFIG="raumfeld/busybox-initramfs.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_BUSYBOX_WATCHDOG is not set
 
