--- a/raumfeld/busybox.config
+++ b/raumfeld/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.21.1
-# Mon Nov 25 14:10:54 2013
+# Fri Jan 31 09:49:46 2014
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -12,7 +12,7 @@ CONFIG_HAVE_DOT_CONFIG=y
 #
 # General Configuration
 #
-CONFIG_DESKTOP=y
+# CONFIG_DESKTOP is not set
 # CONFIG_EXTRA_COMPAT is not set
 # CONFIG_INCLUDE_SUSv2 is not set
 # CONFIG_USE_PORTABLE_CODE is not set
@@ -132,12 +132,12 @@ CONFIG_FEATURE_HWIB=y
 # CONFIG_FEATURE_SEAMLESS_BZ2 is not set
 # CONFIG_FEATURE_SEAMLESS_GZ is not set
 # CONFIG_FEATURE_SEAMLESS_Z is not set
-CONFIG_AR=y
+# CONFIG_AR is not set
 # CONFIG_FEATURE_AR_LONG_FILENAMES is not set
 # CONFIG_FEATURE_AR_CREATE is not set
 CONFIG_BUNZIP2=y
 # CONFIG_BZIP2 is not set
-CONFIG_CPIO=y
+# CONFIG_CPIO is not set
 # CONFIG_FEATURE_CPIO_O is not set
 # CONFIG_FEATURE_CPIO_P is not set
 # CONFIG_DPKG is not set
@@ -147,7 +147,7 @@ CONFIG_GUNZIP=y
 CONFIG_GZIP=y
 CONFIG_FEATURE_GZIP_LONG_OPTIONS=y
 CONFIG_GZIP_FAST=0
-CONFIG_LZOP=y
+# CONFIG_LZOP is not set
 # CONFIG_LZOP_COMPR_HIGH is not set
 # CONFIG_RPM2CPIO is not set
 # CONFIG_RPM is not set
@@ -265,12 +265,12 @@ CONFIG_SEQ=y
 CONFIG_SHA1SUM=y
 # CONFIG_SHA256SUM is not set
 # CONFIG_SHA512SUM is not set
-CONFIG_SHA3SUM=y
+# CONFIG_SHA3SUM is not set
 CONFIG_SLEEP=y
 # CONFIG_FEATURE_FANCY_SLEEP is not set
 # CONFIG_FEATURE_FLOAT_SLEEP is not set
 CONFIG_SORT=y
-CONFIG_FEATURE_SORT_BIG=y
+# CONFIG_FEATURE_SORT_BIG is not set
 # CONFIG_SPLIT is not set
 # CONFIG_FEATURE_SPLIT_FANCY is not set
 # CONFIG_STAT is not set
@@ -351,14 +351,14 @@ CONFIG_SETLOGCONS=y
 # Debian Utilities
 #
 CONFIG_MKTEMP=y
-CONFIG_PIPE_PROGRESS=y
-CONFIG_RUN_PARTS=y
-CONFIG_FEATURE_RUN_PARTS_LONG_OPTIONS=y
+# CONFIG_PIPE_PROGRESS is not set
+# CONFIG_RUN_PARTS is not set
+# CONFIG_FEATURE_RUN_PARTS_LONG_OPTIONS is not set
 # CONFIG_FEATURE_RUN_PARTS_FANCY is not set
 CONFIG_START_STOP_DAEMON=y
 CONFIG_FEATURE_START_STOP_DAEMON_FANCY=y
 CONFIG_FEATURE_START_STOP_DAEMON_LONG_OPTIONS=y
-CONFIG_WHICH=y
+# CONFIG_WHICH is not set
 
 #
 # Editors
@@ -456,16 +456,16 @@ CONFIG_FEATURE_SHADOWPASSWDS=y
 # CONFIG_USE_BB_SHADOW is not set
 CONFIG_USE_BB_CRYPT=y
 # CONFIG_USE_BB_CRYPT_SHA is not set
-CONFIG_ADDUSER=y
+# CONFIG_ADDUSER is not set
 # CONFIG_FEATURE_ADDUSER_LONG_OPTIONS is not set
 # CONFIG_FEATURE_CHECK_NAMES is not set
-CONFIG_FIRST_SYSTEM_ID=100
-CONFIG_LAST_SYSTEM_ID=999
-CONFIG_ADDGROUP=y
+CONFIG_FIRST_SYSTEM_ID=0
+CONFIG_LAST_SYSTEM_ID=0
+# CONFIG_ADDGROUP is not set
 # CONFIG_FEATURE_ADDGROUP_LONG_OPTIONS is not set
 # CONFIG_FEATURE_ADDUSER_TO_GROUP is not set
-CONFIG_DELUSER=y
-CONFIG_DELGROUP=y
+# CONFIG_DELUSER is not set
+# CONFIG_DELGROUP is not set
 # CONFIG_FEATURE_DEL_USER_FROM_GROUP is not set
 CONFIG_GETTY=y
 CONFIG_LOGIN=y
@@ -479,11 +479,11 @@ CONFIG_FEATURE_PASSWD_WEAK_CHECK=y
 # CONFIG_CRYPTPW is not set
 # CONFIG_CHPASSWD is not set
 CONFIG_FEATURE_DEFAULT_PASSWD_ALGO="des"
-CONFIG_SU=y
-CONFIG_FEATURE_SU_SYSLOG=y
-CONFIG_FEATURE_SU_CHECKS_SHELLS=y
+# CONFIG_SU is not set
+# CONFIG_FEATURE_SU_SYSLOG is not set
+# CONFIG_FEATURE_SU_CHECKS_SHELLS is not set
 CONFIG_SULOGIN=y
-CONFIG_VLOCK=y
+# CONFIG_VLOCK is not set
 
 #
 # Linux Ext2 FS Progs
@@ -528,11 +528,11 @@ CONFIG_DEFAULT_DEPMOD_FILE="modules.dep"
 # Linux System Utilities
 #
 # CONFIG_BLOCKDEV is not set
-CONFIG_MDEV=y
-CONFIG_FEATURE_MDEV_CONF=y
+# CONFIG_MDEV is not set
+# CONFIG_FEATURE_MDEV_CONF is not set
 # CONFIG_FEATURE_MDEV_RENAME is not set
 # CONFIG_FEATURE_MDEV_RENAME_REGEXP is not set
-CONFIG_FEATURE_MDEV_EXEC=y
+# CONFIG_FEATURE_MDEV_EXEC is not set
 # CONFIG_FEATURE_MDEV_LOAD_FIRMWARE is not set
 # CONFIG_REV is not set
 # CONFIG_ACPID is not set
@@ -592,7 +592,7 @@ CONFIG_FEATURE_MOUNT_FSTAB=y
 # CONFIG_PIVOT_ROOT is not set
 # CONFIG_RDATE is not set
 # CONFIG_RDEV is not set
-CONFIG_READPROFILE=y
+# CONFIG_READPROFILE is not set
 # CONFIG_RTCWAKE is not set
 # CONFIG_SCRIPT is not set
 # CONFIG_SCRIPTREPLAY is not set
@@ -682,7 +682,7 @@ CONFIG_DC=y
 # CONFIG_DEVFSD_VERBOSE is not set
 # CONFIG_FEATURE_DEVFS is not set
 CONFIG_DEVMEM=y
-CONFIG_EJECT=y
+# CONFIG_EJECT is not set
 # CONFIG_FEATURE_EJECT_SCSI is not set
 # CONFIG_FBSPLASH is not set
 # CONFIG_FLASHCP is not set
@@ -691,8 +691,8 @@ CONFIG_EJECT=y
 # CONFIG_FLASH_ERASEALL is not set
 # CONFIG_IONICE is not set
 # CONFIG_INOTIFYD is not set
-CONFIG_LAST=y
-CONFIG_FEATURE_LAST_SMALL=y
+# CONFIG_LAST is not set
+# CONFIG_FEATURE_LAST_SMALL is not set
 # CONFIG_FEATURE_LAST_FANCY is not set
 CONFIG_HDPARM=y
 CONFIG_FEATURE_HDPARM_GET_IDENTITY=y
@@ -707,14 +707,14 @@ CONFIG_FEATURE_MAKEDEVS_TABLE=y
 # CONFIG_MAN is not set
 # CONFIG_MICROCOM is not set
 CONFIG_MOUNTPOINT=y
-CONFIG_MT=y
+# CONFIG_MT is not set
 # CONFIG_RAIDAUTORUN is not set
 # CONFIG_READAHEAD is not set
 # CONFIG_RFKILL is not set
 CONFIG_RUNLEVEL=y
 # CONFIG_RX is not set
-CONFIG_SETSID=y
-CONFIG_STRINGS=y
+# CONFIG_SETSID is not set
+# CONFIG_STRINGS is not set
 # CONFIG_TASKSET is not set
 # CONFIG_FEATURE_TASKSET_FANCY is not set
 CONFIG_TIME=y
@@ -722,7 +722,7 @@ CONFIG_TIME=y
 # CONFIG_TTYSIZE is not set
 # CONFIG_VOLNAME is not set
 # CONFIG_WALL is not set
-CONFIG_WATCHDOG=y
+# CONFIG_WATCHDOG is not set
 
 #
 # Networking Utilities
@@ -919,8 +919,8 @@ CONFIG_FEATURE_PIDOF_SINGLE=y
 CONFIG_FEATURE_PIDOF_OMIT=y
 # CONFIG_PKILL is not set
 CONFIG_PS=y
-# CONFIG_FEATURE_PS_WIDE is not set
-# CONFIG_FEATURE_PS_LONG is not set
+CONFIG_FEATURE_PS_WIDE=y
+CONFIG_FEATURE_PS_LONG=y
 # CONFIG_FEATURE_PS_TIME is not set
 # CONFIG_FEATURE_PS_ADDITIONAL_COLUMNS is not set
 # CONFIG_FEATURE_PS_UNUSUAL_SYSTEMS is not set
@@ -1022,9 +1022,5 @@ CONFIG_LOGREAD=y
 CONFIG_FEATURE_LOGREAD_REDUCED_LOCKING=y
 # CONFIG_FEATURE_KMSG_SYSLOG is not set
 CONFIG_KLOGD=y
-
-#
-# klogd should not be used together with syslog to kernel printk buffer
-#
 CONFIG_FEATURE_KLOGD_KLOGCTL=y
 CONFIG_LOGGER=y
