--- a/package/opus/Config.in
+++ b/package/opus/Config.in
@@ -13,3 +13,21 @@ config BR2_PACKAGE_OPUS
 	  quality stereo music.
 
 	  http://opus-codec.org
+
+
+if BR2_PACKAGE_OPUS
+
+	config BR2_PACKAGE_OPUS_FIXED_POINT
+	bool "fixed-point implementation"
+	default y if BR2_SOFT_FLOAT
+	help
+	  Compile without floating point operations (for machines without
+	  a fast enough FPU).
+
+	config BR2_PACKAGE_OPUS_FLOAT_APPROX
+	bool "fast approximations for floating point"
+	depends on !BR2_PACKAGE_OPUS_FIXED_POINT
+	help
+	  Enable fast approximations for floating point.
+
+endif
