--- a/package/opus/Config.in
+++ b/package/opus/Config.in
@@ -14,20 +14,13 @@ config BR2_PACKAGE_OPUS
 
 	  http://opus-codec.org
 
-
 if BR2_PACKAGE_OPUS
 
-	config BR2_PACKAGE_OPUS_FIXED_POINT
-	bool "fixed-point implementation"
+config BR2_PACKAGE_OPUS_FIXED_POINT
+	bool "opus fixed-point implementation"
 	default y if BR2_SOFT_FLOAT
 	help
 	  Compile without floating point operations (for machines without
 	  a fast enough FPU).
-
-	config BR2_PACKAGE_OPUS_FLOAT_APPROX
-	bool "fast approximations for floating point"
-	depends on !BR2_PACKAGE_OPUS_FIXED_POINT
-	help
-	  Enable fast approximations for floating point.
 
 endif
