--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-00035-gadbe403-dirty Configuration
+# Buildroot 2013.11-00018-gf0a1671 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -513,7 +513,7 @@ BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPG123=y
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MUSEPACK is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_NEON is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_OPENCV is not set
-BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_OPUS=y
+# BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_OPUS is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_RSVG is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SDL is not set
 # BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SNDFILE is not set
@@ -954,8 +954,7 @@ BR2_PACKAGE_LIBID3TAG=y
 # BR2_PACKAGE_LIBSAMPLERATE is not set
 # BR2_PACKAGE_LIBSNDFILE is not set
 BR2_PACKAGE_LIBVORBIS=y
-BR2_PACKAGE_OPUS=y
-BR2_PACKAGE_OPUS_FIXED_POINT=y
+# BR2_PACKAGE_OPUS is not set
 # BR2_PACKAGE_PORTAUDIO is not set
 # BR2_PACKAGE_SPEEX is not set
 BR2_PACKAGE_TAGLIB=y
