--- a/raumfeld/br2-remotecontrol-arm.config
+++ b/raumfeld/br2-remotecontrol-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-00024-gec9685a-dirty Configuration
+# Buildroot 2013.11-00046-g4923a7c-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -167,7 +167,7 @@ BR2_GCC_VERSION_4_8_X=y
 BR2_GCC_SUPPORTS_FINEGRAINEDMTUNE=y
 BR2_GCC_VERSION="4.8.2"
 BR2_EXTRA_GCC_CONFIG_OPTIONS=""
-# BR2_TOOLCHAIN_BUILDROOT_CXX is not set
+BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_GCC_ENABLE_TLS=y
 # BR2_GCC_ENABLE_OPENMP is not set
 # BR2_GCC_ENABLE_LIBMUDFLAP is not set
@@ -178,6 +178,7 @@ BR2_INET_IPV6=y
 BR2_TOOLCHAIN_HAS_NATIVE_RPC=y
 BR2_USE_WCHAR=y
 BR2_ENABLE_LOCALE=y
+BR2_INSTALL_LIBSTDCPP=y
 BR2_TOOLCHAIN_HAS_THREADS=y
 BR2_TOOLCHAIN_HAS_THREADS_DEBUG=y
 BR2_TOOLCHAIN_HAS_SHADOW_PASSWORDS=y
@@ -285,10 +286,7 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 #
 # BR2_PACKAGE_ALSA_UTILS is not set
 # BR2_PACKAGE_AUMIX is not set
-
-#
-# bellagio needs a toolchain w/ C++, threads, dynamic library
-#
+# BR2_PACKAGE_BELLAGIO is not set
 # BR2_PACKAGE_FAAD2 is not set
 # BR2_PACKAGE_FFMPEG is not set
 # BR2_PACKAGE_FLAC is not set
@@ -297,10 +295,7 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_LAME is not set
 # BR2_PACKAGE_LIBVPX is not set
 # BR2_PACKAGE_MADPLAY is not set
-
-#
-# mpd needs a toolchain w/ C++, threads, wchar
-#
+# BR2_PACKAGE_MPD is not set
 # BR2_PACKAGE_MPG123 is not set
 # BR2_PACKAGE_MPLAYER is not set
 # BR2_PACKAGE_MUSEPACK is not set
@@ -323,19 +318,13 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 #
 # Debugging, profiling and benchmark
 #
-
-#
-# bonnie++ needs a toolchain w/ C++
-#
+# BR2_PACKAGE_BONNIE is not set
 # BR2_PACKAGE_CACHE_CALIBRATOR is not set
 # BR2_PACKAGE_DHRYSTONE is not set
 # BR2_PACKAGE_DMALLOC is not set
 # BR2_PACKAGE_DROPWATCH is not set
 # BR2_PACKAGE_DSTAT is not set
-
-#
-# duma needs a toolchain w/ C++, threads
-#
+# BR2_PACKAGE_DUMA is not set
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_SERVER=y
 # BR2_PACKAGE_GDB_DEBUGGER is not set
@@ -351,10 +340,7 @@ BR2_PACKAGE_KEXEC_ZLIB=y
 # BR2_PACKAGE_LTTNG_TOOLS is not set
 # BR2_PACKAGE_MEMSTAT is not set
 # BR2_PACKAGE_NETPERF is not set
-
-#
-# oprofile needs a toolchain w/ C++
-#
+# BR2_PACKAGE_OPROFILE is not set
 # BR2_PACKAGE_PAX_UTILS is not set
 # BR2_PACKAGE_PERF is not set
 # BR2_PACKAGE_PV is not set
@@ -382,10 +368,7 @@ BR2_PACKAGE_KEXEC_ZLIB=y
 # BR2_PACKAGE_FLEX is not set
 # BR2_PACKAGE_GAWK is not set
 # BR2_PACKAGE_GIT is not set
-
-#
-# gperf needs a toolchain w/ C++
-#
+# BR2_PACKAGE_GPERF is not set
 # BR2_PACKAGE_GREP is not set
 # BR2_PACKAGE_JQ is not set
 # BR2_PACKAGE_LIBTOOL is not set
@@ -489,10 +472,7 @@ BR2_PACKAGE_NTFS_3G=y
 #
 # Graphic libraries
 #
-
-#
-# cegui06 needs a toolchain w/ C++, threads
-#
+# BR2_PACKAGE_CEGUI06 is not set
 BR2_PACKAGE_DIRECTFB=y
 # BR2_PACKAGE_DIRECTFB_MULTI is not set
 # BR2_PACKAGE_DIRECTFB_DEBUG is not set
@@ -515,19 +495,13 @@ BR2_PACKAGE_DIRECTFB_DITHER_RGB16=y
 # BR2_PACKAGE_FBDUMP is not set
 # BR2_PACKAGE_FBGRAB is not set
 # BR2_PACKAGE_FBSET is not set
-
-#
-# fbterm needs a toolchain w/ C++, wchar, locale
-#
+# BR2_PACKAGE_FBTERM is not set
 # BR2_PACKAGE_FBV is not set
 # BR2_PACKAGE_FB_TEST_APP is not set
 # BR2_PACKAGE_IMAGEMAGICK is not set
 # BR2_PACKAGE_LINUX_FUSION is not set
 # BR2_PACKAGE_LITE is not set
-
-#
-# ocrad needs a toolchain w/ C++
-#
+# BR2_PACKAGE_OCRAD is not set
 # BR2_PACKAGE_PSPLASH is not set
 # BR2_PACKAGE_SAWMAN is not set
 # BR2_PACKAGE_SDL is not set
@@ -536,14 +510,8 @@ BR2_PACKAGE_DIRECTFB_DITHER_RGB16=y
 # Other GUIs
 #
 # BR2_PACKAGE_EFL is not set
-
-#
-# qt needs a toolchain w/ C++, threads
-#
-
-#
-# Qt5 needs a toolchain w/ wchar, IPv6, threads, C++
-#
+# BR2_PACKAGE_QT is not set
+# BR2_PACKAGE_QT5 is not set
 # BR2_PACKAGE_XORG7 is not set
 # BR2_PACKAGE_WESTON is not set
 
@@ -633,10 +601,7 @@ BR2_DBUS_LIBXML2=y
 # BR2_PACKAGE_FXLOAD is not set
 # BR2_PACKAGE_GADGETFS_TEST is not set
 # BR2_PACKAGE_GPSD is not set
-
-#
-# gptfdisk needs a toolchain w/ largefile, wchar, C++
-#
+# BR2_PACKAGE_GPTFDISK is not set
 BR2_PACKAGE_GVFS=y
 # BR2_PACKAGE_GVFS_AFP is not set
 # BR2_PACKAGE_HDPARM is not set
@@ -649,10 +614,7 @@ BR2_PACKAGE_GVFS=y
 # BR2_PACKAGE_KBD is not set
 # BR2_PACKAGE_LCDPROC is not set
 # BR2_PACKAGE_LM_SENSORS is not set
-
-#
-# lshw needs a toolchain w/ C++, largefile, wchar
-#
+# BR2_PACKAGE_LSHW is not set
 # BR2_PACKAGE_LSUIO is not set
 # BR2_PACKAGE_LVM2 is not set
 # BR2_PACKAGE_MDADM is not set
@@ -662,10 +624,7 @@ BR2_PACKAGE_GVFS=y
 # BR2_PACKAGE_NANOCOM is not set
 # BR2_PACKAGE_NEARD is not set
 # BR2_PACKAGE_OFONO is not set
-
-#
-# ola needs a toolchain w/ C++, threads, largefile, wchar
-#
+# BR2_PACKAGE_OLA is not set
 # BR2_PACKAGE_OPEN2300 is not set
 # BR2_PACKAGE_OPENOCD is not set
 
@@ -676,19 +635,13 @@ BR2_PACKAGE_GVFS=y
 # BR2_PACKAGE_PCIUTILS is not set
 # BR2_PACKAGE_PICOCOM is not set
 # BR2_PACKAGE_RNG_TOOLS is not set
-
-#
-# rpi-userland needs a toolchain w/ C++, largefile, threads
-#
+# BR2_PACKAGE_RPI_USERLAND is not set
 # BR2_PACKAGE_SANE_BACKENDS is not set
 # BR2_PACKAGE_SDPARM is not set
 # BR2_PACKAGE_SETSERIAL is not set
 # BR2_PACKAGE_SFDISK is not set
 # BR2_PACKAGE_SG3_UTILS is not set
-
-#
-# smartmontools needs a toolchain w/ C++
-#
+# BR2_PACKAGE_SMARTMONTOOLS is not set
 # BR2_PACKAGE_SNOWBALL_HDMISERVICE is not set
 # BR2_PACKAGE_SREDIRD is not set
 # BR2_PACKAGE_STATSERIAL is not set
@@ -722,10 +675,7 @@ BR2_PACKAGE_USBMOUNT=y
 # BR2_PACKAGE_JIMTCL is not set
 # BR2_PACKAGE_LUA is not set
 # BR2_PACKAGE_LUAJIT is not set
-
-#
-# nodejs needs a toolchain w/ C++, IPv6, largefile, threads
-#
+# BR2_PACKAGE_NODEJS is not set
 # BR2_PACKAGE_PERL is not set
 # BR2_PACKAGE_PHP is not set
 # BR2_PACKAGE_PYTHON is not set
@@ -741,15 +691,9 @@ BR2_PACKAGE_USBMOUNT=y
 # Audio/Sound
 #
 # BR2_PACKAGE_ALSA_LIB is not set
-
-#
-# audiofile needs a toolchain w/ C++
-#
+# BR2_PACKAGE_AUDIOFILE is not set
 # BR2_PACKAGE_CELT051 is not set
-
-#
-# fdk-aac needs a toolchain w/ C++
-#
+# BR2_PACKAGE_FDK_AAC is not set
 # BR2_PACKAGE_LIBAO is not set
 # BR2_PACKAGE_LIBCDAUDIO is not set
 # BR2_PACKAGE_LIBCUE is not set
@@ -765,15 +709,9 @@ BR2_PACKAGE_USBMOUNT=y
 # BR2_PACKAGE_OPUS is not set
 # BR2_PACKAGE_PORTAUDIO is not set
 # BR2_PACKAGE_SPEEX is not set
-
-#
-# taglib needs a toolchain w/ C++
-#
+# BR2_PACKAGE_TAGLIB is not set
 # BR2_PACKAGE_TREMOR is not set
-
-#
-# webrtc-audio-processing needs a toolchain w/ C++, threads
-#
+# BR2_PACKAGE_WEBRTC_AUDIO_PROCESSING is not set
 
 #
 # Compression and decompression
@@ -782,10 +720,7 @@ BR2_PACKAGE_LIBARCHIVE=y
 # BR2_PACKAGE_LIBARCHIVE_BSDTAR is not set
 # BR2_PACKAGE_LIBARCHIVE_BSDCPIO is not set
 BR2_PACKAGE_LZO=y
-
-#
-# snappy needs a toolchain w/ C++
-#
+# BR2_PACKAGE_SNAPPY is not set
 BR2_PACKAGE_ZLIB=y
 
 #
@@ -814,15 +749,9 @@ BR2_PACKAGE_OPENSSL=y
 # Database
 #
 # BR2_PACKAGE_BERKELEYDB is not set
-
-#
-# cppdb needs a toolchain w/ C++, threads
-#
+# BR2_PACKAGE_CPPDB is not set
 # BR2_PACKAGE_GDBM is not set
-
-#
-# MySQL client needs a toolchain w/ C++, threads
-#
+# BR2_PACKAGE_MYSQL_CLIENT is not set
 # BR2_PACKAGE_REDIS is not set
 
 #
@@ -855,10 +784,7 @@ BR2_PACKAGE_LIBLOCKFILE=y
 BR2_PACKAGE_FREETYPE=y
 # BR2_PACKAGE_GD is not set
 # BR2_PACKAGE_GDK_PIXBUF is not set
-
-#
-# harfbuzz needs a toolchain w/ C++
-#
+# BR2_PACKAGE_HARFBUZZ is not set
 # BR2_PACKAGE_IMLIB2 is not set
 BR2_PACKAGE_JPEG=y
 BR2_PACKAGE_LIBJPEG=y
@@ -870,31 +796,16 @@ BR2_PACKAGE_LIBJPEG=y
 # BR2_PACKAGE_LIBGEOTIFF is not set
 BR2_PACKAGE_LIBPNG=y
 # BR2_PACKAGE_LIBQRENCODE is not set
-
-#
-# libraw needs a toolchain w/ C++
-#
-
-#
-# librsvg needs a toolchain w/ wchar, threads, C++
-#
+# BR2_PACKAGE_LIBRAW is not set
+# BR2_PACKAGE_LIBRSVG is not set
 # BR2_PACKAGE_LIBSVG is not set
 # BR2_PACKAGE_LIBSVG_CAIRO is not set
 # BR2_PACKAGE_LIBSVGTINY is not set
 # BR2_PACKAGE_LIBUNGIF is not set
-
-#
-# opencv needs a toolchain w/ C++, wchar
-#
-
-#
-# pango needs a toolchain w/ wchar, threads, C++
-#
+# BR2_PACKAGE_OPENCV is not set
+# BR2_PACKAGE_PANGO is not set
 # BR2_PACKAGE_PIXMAN is not set
-
-#
-# poppler needs a toolchain w/ C++, threads
-#
+# BR2_PACKAGE_POPPLER is not set
 # BR2_PACKAGE_TIFF is not set
 # BR2_PACKAGE_WAYLAND is not set
 
@@ -902,26 +813,17 @@ BR2_PACKAGE_LIBPNG=y
 # webkit needs libgtk2 and a toolchain w/ C++, wchar, threads
 #
 # BR2_PACKAGE_WEBP is not set
-
-#
-# zxing needs a toolchain w/ C++
-#
+# BR2_PACKAGE_ZXING is not set
 
 #
 # Hardware handling
 #
 # BR2_PACKAGE_CCID is not set
 # BR2_PACKAGE_DTC is not set
-
-#
-# lcdapi needs a toolchain w/ C++, threads
-#
+# BR2_PACKAGE_LCDAPI is not set
 # BR2_PACKAGE_LIBAIO is not set
 # BR2_PACKAGE_LIBATASMART is not set
-
-#
-# libcec needs a toolchain w/ C++, wchar, threads
-#
+# BR2_PACKAGE_LIBCEC is not set
 # BR2_PACKAGE_LIBFREEFARE is not set
 # BR2_PACKAGE_LIBFTDI is not set
 # BR2_PACKAGE_LIBHID is not set
@@ -930,10 +832,7 @@ BR2_PACKAGE_LIBPNG=y
 # BR2_PACKAGE_LIBNFC_LLCP is not set
 # BR2_PACKAGE_LIBQMI is not set
 # BR2_PACKAGE_LIBRAW1394 is not set
-
-#
-# libserial needs a toolchain w/ C++
-#
+# BR2_PACKAGE_LIBSERIAL is not set
 # BR2_PACKAGE_LIBSOC is not set
 BR2_PACKAGE_LIBUSB=y
 # BR2_PACKAGE_LIBUSB_COMPAT is not set
@@ -943,10 +842,7 @@ BR2_PACKAGE_LIBUSB=y
 # BR2_PACKAGE_NEARDAL is not set
 # BR2_PACKAGE_PCSC_LITE is not set
 # BR2_PACKAGE_TSLIB is not set
-
-#
-# urg needs a toolchain w/ C++
-#
+# BR2_PACKAGE_URG is not set
 
 #
 # Javascript
@@ -970,80 +866,44 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_JANSSON is not set
 # BR2_PACKAGE_JSON_C is not set
 # BR2_PACKAGE_JSON_GLIB is not set
-
-#
-# libjson needs a toolchain w/ C++
-#
+# BR2_PACKAGE_LIBJSON is not set
 # BR2_PACKAGE_LIBROXML is not set
 BR2_PACKAGE_LIBXML2=y
-
-#
-# libxml++ needs a toolchain w/ C++, wchar, threads
-#
+# BR2_PACKAGE_LIBXMLPP is not set
 # BR2_PACKAGE_LIBXSLT is not set
 # BR2_PACKAGE_LIBYAML is not set
 # BR2_PACKAGE_MXML is not set
 # BR2_PACKAGE_RAPIDJSON is not set
-
-#
-# xerces-c++ needs a toolchain w/ C++, wchar
-#
+# BR2_PACKAGE_XERCES is not set
 # BR2_PACKAGE_YAJL is not set
 
 #
 # Multimedia
 #
-
-#
-# libdvbsi++ needs a toolchain w/ C++, wchar, threads
-#
+# BR2_PACKAGE_LIBDVBSI is not set
 # BR2_PACKAGE_LIBDVDNAV is not set
 # BR2_PACKAGE_LIBDVDREAD is not set
-
-#
-# libebml needs a toolchain w/ C++
-#
+# BR2_PACKAGE_LIBEBML is not set
 # BR2_PACKAGE_LIBFSLCODEC is not set
 # BR2_PACKAGE_LIBFSLPARSER is not set
 # BR2_PACKAGE_LIBFSLVPUWRAP is not set
-
-#
-# libmatroska needs a toolchain w/ C++
-#
+# BR2_PACKAGE_LIBMATROSKA is not set
 # BR2_PACKAGE_LIBMMS is not set
 # BR2_PACKAGE_LIBMPEG2 is not set
 # BR2_PACKAGE_LIBOGG is not set
 # BR2_PACKAGE_LIBPLAYER is not set
 # BR2_PACKAGE_LIBTHEORA is not set
-
-#
-# live555 needs a toolchain w/ C++
-#
-
-#
-# mediastreamer needs a toolchain w/ threads, C++, IPv6
-#
+# BR2_PACKAGE_LIVE555 is not set
+# BR2_PACKAGE_MEDIASTREAMER is not set
 
 #
 # Networking
 #
-
-#
-# cppzmq needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
-
-#
-# czmq needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
-
-#
-# filemq needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
+# BR2_PACKAGE_CPPZMQ is not set
+# BR2_PACKAGE_CZMQ is not set
+# BR2_PACKAGE_FILEMQ is not set
 # BR2_PACKAGE_GLIB_NETWORKING is not set
-
-#
-# libcgicc needs a toolchain w/ C++
-#
+# BR2_PACKAGE_LIBCGICC is not set
 # BR2_PACKAGE_LIBCGI is not set
 # BR2_PACKAGE_LIBCURL is not set
 # BR2_PACKAGE_LIBDNET is not set
@@ -1074,43 +934,22 @@ BR2_PACKAGE_LIBNL=y
 BR2_PACKAGE_LIBSOUP=y
 # BR2_PACKAGE_LIBSOUP_SSL is not set
 # BR2_PACKAGE_LIBTIRPC is not set
-
-#
-# libtorrent needs a toolchain w/ C++, threads
-#
+# BR2_PACKAGE_LIBTORRENT is not set
 # BR2_PACKAGE_LIBUPNP is not set
 # BR2_PACKAGE_LIBVNCSERVER is not set
 # BR2_PACKAGE_LIBWEBSOCKETS is not set
 # BR2_PACKAGE_NEON is not set
 # BR2_PACKAGE_NSS_MDNS is not set
-
-#
-# omniORB needs a toolchain w/ C++, threads
-#
+# BR2_PACKAGE_OMNIORB is not set
 # BR2_PACKAGE_OPENPGM is not set
 # BR2_PACKAGE_ORTP is not set
 # BR2_PACKAGE_SLIRP is not set
-
-#
-# snmp++ needs a toolchain w/ threads, C++
-#
+# BR2_PACKAGE_SNMPPP is not set
 # BR2_PACKAGE_USBREDIR is not set
-
-#
-# wvstreams needs a toolchain w/ C++, largefile
-#
-
-#
-# zeromq needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
-
-#
-# zmqpp needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
-
-#
-# zyre needs a toolchain w/ C++, IPv6, largefile, wchar, threads
-#
+# BR2_PACKAGE_WVSTREAMS is not set
+# BR2_PACKAGE_ZEROMQ is not set
+# BR2_PACKAGE_ZMQPP is not set
+# BR2_PACKAGE_ZYRE is not set
 
 #
 # Other
@@ -1118,39 +957,21 @@ BR2_PACKAGE_LIBSOUP=y
 # BR2_PACKAGE_APR is not set
 # BR2_PACKAGE_APR_UTIL is not set
 # BR2_PACKAGE_ARGP_STANDALONE is not set
-
-#
-# boost needs a toolchain w/ C++, largefile, threads
-#
-
-#
-# cppcms needs an (e)glibc toolchain w/ C++
-#
+# BR2_PACKAGE_BOOST is not set
+# BR2_PACKAGE_CPPCMS is not set
 # BR2_PACKAGE_EIGEN is not set
 # BR2_PACKAGE_ELFUTILS is not set
 # BR2_PACKAGE_FFTW is not set
-
-#
-# glibmm needs a toolchain w/ C++, wchar, threads
-#
+# BR2_PACKAGE_GLIBMM is not set
 # BR2_PACKAGE_GMP is not set
-
-#
-# google-breakpad requires an (e)glibc toolchain with C++
-#
+# BR2_PACKAGE_GOOGLE_BREAKPAD is not set
 # BR2_PACKAGE_GSL is not set
-
-#
-# gtest needs a toolchain w/ C++, wchar, threads
-#
+# BR2_PACKAGE_GTEST is not set
 # BR2_PACKAGE_LIBARGTABLE2 is not set
 # BR2_PACKAGE_LIBATOMIC_OPS is not set
 # BR2_PACKAGE_LIBCAP is not set
 # BR2_PACKAGE_LIBCAP_NG is not set
-
-#
-# libcgroup needs an (e)glibc toolchain w/ C++
-#
+# BR2_PACKAGE_LIBCGROUP is not set
 # BR2_PACKAGE_LIBCOFI is not set
 BR2_PACKAGE_LIBDAEMON=y
 # BR2_PACKAGE_LIBELF is not set
@@ -1164,46 +985,25 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # BR2_PACKAGE_LIBNSPR is not set
 # BR2_PACKAGE_LIBPFM4 is not set
 # BR2_PACKAGE_LIBPTHSEM is not set
-
-#
-# libsigc++ needs a toolchain w/ C++
-#
+# BR2_PACKAGE_LIBSIGC is not set
 # BR2_PACKAGE_LIBSIGSEGV is not set
 # BR2_PACKAGE_LIBTASN1 is not set
 # BR2_PACKAGE_LIBTPL is not set
 BR2_PACKAGE_LIBUNWIND=y
 # BR2_PACKAGE_LIBURCU is not set
 # BR2_PACKAGE_LINUX_PAM is not set
-
-#
-# log4cxx needs a toolchain w/ C++, threads, dynamic library
-#
+# BR2_PACKAGE_LOG4CXX is not set
 # BR2_PACKAGE_LTTNG_LIBUST is not set
 # BR2_PACKAGE_MPC is not set
 # BR2_PACKAGE_MPFR is not set
-
-#
-# msgpack needs a toolchain w/ C++
-#
+# BR2_PACKAGE_MSGPACK is not set
 # BR2_PACKAGE_MTDEV2TUIO is not set
 # BR2_PACKAGE_ORC is not set
 # BR2_PACKAGE_P11_KIT is not set
-
-#
-# poco needs a toolchain w/ wchar, threads, C++
-#
-
-#
-# protobuf needs a toolchain w/ C++, threads
-#
-
-#
-# protobuf-c needs a toolchain w/ C++, threads
-#
-
-#
-# schifra needs a toolchain w/ C++
-#
+# BR2_PACKAGE_POCO is not set
+# BR2_PACKAGE_PROTOBUF is not set
+# BR2_PACKAGE_PROTOBUF_C is not set
+# BR2_PACKAGE_SCHIFRA is not set
 # BR2_PACKAGE_TZDATA is not set
 
 #
@@ -1214,14 +1014,8 @@ BR2_PACKAGE_LIBUNWIND=y
 #
 # Text and terminal handling
 #
-
-#
-# enchant needs a toolchain w/ C++, threads, wchar
-#
-
-#
-# icu needs a toolchain w/ C++, wchar, threads
-#
+# BR2_PACKAGE_ENCHANT is not set
+# BR2_PACKAGE_ICU is not set
 # BR2_PACKAGE_LIBEDIT is not set
 # BR2_PACKAGE_LIBFRIBIDI is not set
 # BR2_PACKAGE_LIBICONV is not set
@@ -1262,10 +1056,7 @@ BR2_PACKAGE_AVAHI=y
 BR2_PACKAGE_AVAHI_AUTOIPD=y
 BR2_PACKAGE_AVAHI_DAEMON=y
 # BR2_PACKAGE_AXEL is not set
-
-#
-# bcusdk needs a toolchain w/ C++
-#
+# BR2_PACKAGE_BCUSDK is not set
 # BR2_PACKAGE_BIND is not set
 # BR2_PACKAGE_BLUEZ_UTILS is not set
 # BR2_PACKAGE_BMON is not set
@@ -1278,10 +1069,7 @@ BR2_PACKAGE_AVAHI_DAEMON=y
 # BR2_PACKAGE_CONNMAN is not set
 # BR2_PACKAGE_CONNTRACK_TOOLS is not set
 # BR2_PACKAGE_CRDA is not set
-
-#
-# ctorrent needs a toolchain w/ C++
-#
+# BR2_PACKAGE_CTORRENT is not set
 # BR2_PACKAGE_CUPS is not set
 BR2_PACKAGE_DHCP=y
 # BR2_PACKAGE_DHCP_SERVER is not set
@@ -1307,36 +1095,25 @@ BR2_PACKAGE_GSSDP=y
 # BR2_PACKAGE_IGH_ETHERCAT is not set
 # BR2_PACKAGE_IGMPPROXY is not set
 # BR2_PACKAGE_INADYN is not set
-
-#
-# iperf needs a toolchain w/ C++
-#
+# BR2_PACKAGE_IPERF is not set
 # BR2_PACKAGE_IPROUTE2 is not set
 # BR2_PACKAGE_IPSEC_TOOLS is not set
 # BR2_PACKAGE_IPSET is not set
 # BR2_PACKAGE_IPTABLES is not set
 # BR2_PACKAGE_IPUTILS is not set
 BR2_PACKAGE_IW=y
-
-#
-# kismet needs a toolchain w/ threads, C++
-#
+# BR2_PACKAGE_KISMET is not set
 # BR2_PACKAGE_KNOCK is not set
 # BR2_PACKAGE_LIGHTTPD is not set
-
-#
-# linknx needs a toolchain w/ C++
-#
+# BR2_PACKAGE_LINKNX is not set
 # BR2_PACKAGE_LINKS is not set
-
-#
-# linphone needs a toolchain w/ threads, C++, IPv6
-#
+# BR2_PACKAGE_LINPHONE is not set
 # BR2_PACKAGE_LRZSZ is not set
 # BR2_PACKAGE_MACCHANGER is not set
 # BR2_PACKAGE_MII_DIAG is not set
 # BR2_PACKAGE_MINIDLNA is not set
 # BR2_PACKAGE_MONGOOSE is not set
+# BR2_PACKAGE_MONGREL2 is not set
 # BR2_PACKAGE_MROUTED is not set
 # BR2_PACKAGE_MSMTP is not set
 # BR2_PACKAGE_MUTT is not set
@@ -1352,10 +1129,7 @@ BR2_PACKAGE_IW=y
 # BR2_PACKAGE_NFACCT is not set
 # BR2_PACKAGE_NGIRCD is not set
 # BR2_PACKAGE_NGREP is not set
-
-#
-# nmap needs a toolchain w/ C++, IPv6, threads
-#
+# BR2_PACKAGE_NMAP is not set
 # BR2_PACKAGE_NOIP is not set
 # BR2_PACKAGE_NTP is not set
 # BR2_PACKAGE_NUTTCP is not set
@@ -1378,10 +1152,7 @@ BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_RPCBIND is not set
 # BR2_PACKAGE_RSH_REDONE is not set
 # BR2_PACKAGE_RSYNC is not set
-
-#
-# rtorrent needs a toolchain w/ C++, threads, wchar
-#
+# BR2_PACKAGE_RTORRENT is not set
 BR2_PACKAGE_SAMBA=y
 BR2_PACKAGE_SAMBA_MAX_DEBUGLEVEL=2
 
@@ -1435,19 +1206,13 @@ BR2_PACKAGE_SAMBA_AVAHI=y
 #
 # support gamin - disabled (requires gamin)
 #
-
-#
-# sconeserver needs a toolchain w/ C++, threads
-#
+# BR2_PACKAGE_SCONESERVER is not set
 # BR2_PACKAGE_SER2NET is not set
 # BR2_PACKAGE_SOCAT is not set
 # BR2_PACKAGE_SOCKETCAND is not set
 # BR2_PACKAGE_SPAWN_FCGI is not set
 # BR2_PACKAGE_SPICE_PROTOCOL is not set
-
-#
-# squid needs a toolchain w/ C++, IPv6
-#
+# BR2_PACKAGE_SQUID is not set
 # BR2_PACKAGE_STRONGSWAN is not set
 # BR2_PACKAGE_STUNNEL is not set
 # BR2_PACKAGE_TCPDUMP is not set
@@ -1482,10 +1247,7 @@ BR2_PACKAGE_WPA_SUPPLICANT_DBUS_NEW=y
 BR2_PACKAGE_WPA_SUPPLICANT_DBUS_INTROSPECTION=y
 BR2_PACKAGE_WPA_SUPPLICANT_DEBUG_SYSLOG=y
 # BR2_PACKAGE_WPA_SUPPLICANT_WPS is not set
-
-#
-# wvdial needs a toolchain w/ C++, largefile
-#
+# BR2_PACKAGE_WVDIAL is not set
 # BR2_PACKAGE_XINETD is not set
 # BR2_PACKAGE_XL2TP is not set
 
